# Nikobus-HA

./: .gitignore  CHANGELOG.md  README.md  hacs.json  mypy.ini  requirements.txt  ruff.toml
custom_components/: __init__.py  const.py  coordinator.py  manifest.json  nikobus.py  nikobus2.py  nikobusAPI.py
docs/: README.md  index.html  nikobus-protocol.md
documentation/: scene-mapping.md
nikobus/: __init__.py  binary_sensor.py  button.py  config_flow.py  coordinator.py  cover.py  light.py  nikobus.py  nkbcommand.py  nkbconnect.py  nkblistener.py  nkbprotocol.py  switch.py
nikobus-discovery/: pyproject.toml
nikobus-discovery/nikobus_discovery/: __init__.py  chunk_decoder.py  const.py  dimmer_decoder.py  discovery.py  fileio.py  mapping.py  protocol.py  shutter_decoder.py  switch_decoder.py
nikobus-discovery/nikobus_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pepss-golf/: README.md  index.html
scripts/: nkb_scene_buckets.py
tests/: conftest.py  test_actuator_burst.py  test_binary_sensor.py  test_button_press_repeat.py  test_category_for_button_type.py  test_cf_ingest.py  test_cf_storage.py  test_config_flow.py  test_config_flow_helpers.py  test_coordinator.py  test_cover.py  test_diagnostics_quality.py  test_discovery_chunking.py  test_discovery_pclink.py  test_discovery_progress_vendor_aligned.py  test_fileio.py  test_input_latch_switch.py  test_input_module_naming.py  test_inventory_parsing.py  test_known_entity_cf_scenes.py  test_light.py  test_manual_config.py  test_migration.py  test_module_migration.py  test_nkb_upload.py  (+14 more)
(+98 files in other folders)
