[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nikobus-discovery"
version = "1.0.0"
description = "Protocol-level discovery library for Nikobus home-automation systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "fdebrus"},
]
keywords = ["nikobus", "home-automation", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "nikobusconnect>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/fdebrus/nikobus-ha"
Issues = "https://github.com/fdebrus/nikobus-ha/issues"

[tool.setuptools.packages.find]
include = ["nikobus_discovery*"]
